# nvfbc-v4l2

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  defines.h  main.c  nvfbc.c  nvfbc_v4l2.c  nvfbc_v4l2.h  pixel_fmt_tools.h  v4l2_wrapper.h  xrandr_wrapper.h
